# code_memory

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/plans/: 2026-02-24-graph-queries-design.md  2026-02-24-graph-queries-plan.md  2026-02-24-indexing-performance-design.md  2026-02-24-indexing-performance-plan.md  2026-02-25-multi-language-support-design.md  2026-02-25-semantic-search-design.md  2026-02-25-semantic-search-plan.md  2026-02-25-usage-monitoring-design.md  2026-02-25-usage-monitoring-plan.md
hooks/: hooks.json  prompt-context.sh
skills/index-project/: SKILL.md
skills/memory-stats/: SKILL.md
skills/memory-usage/: SKILL.md
skills/recall/: SKILL.md
skills/stats/: SKILL.md
skills/summary/: SKILL.md
src/code_memory/: __main__.py  db.py  embedding_engine.py  git_utils.py  graph_engine.py  mcp_tools.py  memory_manager.py  symbol_indexer.py  usage_logger.py
tests/: test_auto_link.py  test_db.py  test_db_phase2.py  test_dependencies.py  test_embedding_engine.py  test_git_utils.py  test_go_indexer.py  test_grammar_fallback.py  test_graph_engine.py  test_graph_integration.py  test_graph_tools.py  test_incremental_indexing.py  test_integration.py  test_js_indexer.py  test_memory_manager.py  test_multi_lang_collect.py  test_multi_lang_config.py  test_multi_lang_integration.py  test_phase2_integration.py  test_project_indexer.py  test_search.py  test_symbol_indexer.py  test_ts_indexer.py  test_usage_logger.py  test_usage_logging_integration.py
